Resolved merge conflicts

--- a/index.html
+++ b/index.html
@@ -1,3 +1,39 @@
-<h2>Nothing here yet!</h2>
-<p>Don't worry, this is the right URL. I just haven't made myself a webpage yet, but soon there should be one here.</p>
-<p><i>Lubin Pappalardo</i></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!--title and meta-->
+    <title>Lubin Pappalardo</title>
+    <meta charset="UTF-8">
+    <meta name="Lubin Pappalardo">
+    <meta name="description" content="Lubin Pappalardo's web portfolio"/>
+    <meta name="author" content="Lubin Pappalardo" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="color-scheme" content="light only">
+
+    <!-- Icon -->
+    <!-- <link rel="icon" type="image/png" href="" media="(prefers-color-scheme: light)" /> -->
+
+    <!-- <link rel="icon" type="image/png" href="" media="(prefers-color-scheme: dark)" /> -->
+
+    <!--apple-->
+    <!-- <link rel="apple-touch-icon" href=""> -->
+    <!-- <link rel="apple-touch-startup-image" href=""> -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <!--style-->
+    <link rel="stylesheet" href="styles.css">
+
+    <!--script-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="index.js" defer></script>
+</head>
+<body>
+
+    <div id="cursor"></div>
+    
+    <h1>Lubin Pappalardo</h1>
+    <p>This website is still under construction... come back soon!</p>
+
+</body>
+</html>
