--- a/index.html
+++ b/index.html
@@ -55,7 +55,34 @@
     </navbar>
 
 
-    <section id="section_home">
+    <section id="home_section">
+
+        <header>
+            <div class="header_intro"><img src='assets/svg/light_mode.svg' alt="Switch to dark mode"/>Welcome! I'm</div>
+            <div class="header_main">
+                <h2>Lubin<span>he/him</span></h2>
+                <h2>Pappalardo</h2>
+                <div class="header_desc">I am a 16y.o. from France <img src='assets/img/fr_flag_emoji.png' alt='French flag'>. I love to work on creative projects and have many art related hobbies such as....</div>
+            </div>
+        </header>
+ 
+        <div id="header_img">
+
+            <div id="header_img_fade"></div>
+
+            <div id="header_circle">
+                <svg viewBox="0 0 500 500">
+                    <path id="curve" fill="transparent" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" />
+                    <text width="500">
+                      <textPath xlink:href="#curve">
+                        Portfolio 2024
+                      </textPath>
+                    </text>
+                  </svg>
+            </div>
+
+            <img id="home_lubinpappalardo" src="assets/img/lubinpappalardo.png" alt="Lubin Pappalardo">
+        </div>
     </section>
 
 
