--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="index.js" defer></script>
 </head>
-<body class='light_mode'>
+<body>
 
     <div id="leftLine"></div>
 
     <navbar id="navbar">
 
         <div class='nav_logo'>
-            <img src="assets/svg/lp_light.svg" alt="Lubin Pappalardo">
+            <svg width="336" height="423" viewBox="0 0 336 423" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0V300H122V422.14H179.78V300L234.564 299.997C273.084 299.997 296.196 290.569 312.46 273.426C327.44 257.997 336 234.854 336 211.283C336 187.711 327.44 164.569 312.46 149.14C295.768 131.569 273.084 122.14 234.564 122.14H122V248.571H57.7674V0H0ZM231.996 248.569H179.78V173.569H231.996C251.684 173.569 261.528 178.283 268.376 185.569C274.796 192.426 278.22 201.426 278.22 211.283C278.22 221.14 274.796 229.711 268.376 236.569C261.528 243.854 251.684 248.569 231.996 248.569Z" fill="hsl(0, 0%, 80%)"/>
+            </svg>                
         </div>
 
         <div class='nav_links'>
@@ -47,18 +49,34 @@
         <div class="nav_language">
             <p>EN</p>
             <div class='language_indicator'>
+                <!-- <div class="background"></div> -->
                 <div class="active"></div>
-                <div></div>
             </div>
-            <p>FR</p>
+            <p class="language_fr">FR</p>
         </div>
+
+        <p>Portfolio 2024</p>
+
+        <!-- <div class="nav_contactme">hello@lubinpappalardo.com</div> -->
+
+        <img id="hamburger_menu" src='assets/svg/hamburger_menu.svg' alt="menu">
     </navbar>
 
 
     <section id="home_section">
 
+        <!-- <p id="portfolioDate">porfolio 2024</p> -->
+
         <header>
-            <div class="header_intro"><img src='assets/svg/light_mode.svg' alt="Switch to dark mode"/>Welcome! I'm</div>
+            <div class="header_intro">
+                <div id="theme_toggle">
+                    <div class='theme_toggle_wrap'>
+                        <img class='light_mode' src='assets/svg/light_mode.svg' alt="Switch to dark mode"/>
+                        <img class='dark_mode' src='assets/svg/dark_mode.svg' alt="Switch to light mode"/>
+                    </div>
+                </div>    
+                Welcome! I'm
+            </div>
             <div class="header_main">
                 <h2>Lubin<span>he/him</span></h2>
                 <h2>Pappalardo</h2>
@@ -66,16 +84,16 @@
             </div>
         </header>
  
-        <div id="header_img">
+        <div id="home_img">
 
-            <div id="header_img_fade"></div>
+            <div id="home_img_fade"></div>
 
-            <div id="header_circle">
+            <div id="home_circle">
                 <svg viewBox="0 0 500 500">
                     <path id="curve" fill="transparent" d="M73.2,148.6c4-6.1,65.5-96.8,178.6-95.6c111.3,1.2,170.8,90.3,175.1,97" />
                     <text width="500">
                       <textPath xlink:href="#curve">
-                        Portfolio 2024
+                        <!-- portfolio 2024 -->hello@lubinpappalardo.com
                       </textPath>
                     </text>
                   </svg>
@@ -83,6 +101,13 @@
 
             <img id="home_lubinpappalardo" src="assets/img/lubinpappalardo.png" alt="Lubin Pappalardo">
         </div>
+
+        <!-- <div id="home_hobbies">
+            <h1>PHOTOGRAPHY</h1>
+            <h1>GRAPHIC DESIGN</h1>
+            <h1>TRAD. ART</h1>
+            <h1>WEB DESIGN</h1>
+        </div> -->
     </section>
 
 
