home section new design

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Lubin Pappalardo's web portfolio"/>
     <meta name="author" content="Lubin Pappalardo" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="color-scheme" content="light only">
+    <meta name="color-scheme" content="dark only">
 
     <!-- Icon -->
     <link rel="icon" type="image/png" href="assets/img/lp_light.png" media="(prefers-color-scheme: light)" />
@@ -24,29 +24,19 @@
     <link rel="stylesheet" href="styles.css">
 
     <!--script-->
+    <script src="assets/gsap/gsap.min.js"></script>
+    <script src="assets/gsap/ScrollTrigger.min.js"></script>
+    <script src="assets/gsap/TextPlugin.min.js"></script>
+    <script src="assets/gsap/ScrollToPlugin.min.js"></script>
     <script src="assets/jquery.js"></script>
     <script src="index.js" defer></script>
+    <script src="gsapAnimations.js" defer></script>
 </head>
 <body>
 
     <navbar id="navbar">
-        <div class="nav_porfolio">
-            <div id="theme_toggle">
-                <div class='theme_toggle_wrap'>
-                    <img class='light_mode' src='assets/svg/light_mode.svg' alt="Switch to dark mode"/>
-                    <img class='dark_mode' src='assets/svg/dark_mode.svg' alt="Switch to light mode"/>
-                </div>
-            </div>    
-            <p>Portfolio 2024</p>
-        </div>
-
-        <div class="nav_language">
-            <p>EN</p>
-            <div class='language_indicator'>
-                <!-- <div class="background"></div> -->
-                <div class="active"></div>
-            </div>
-            <p class="language_fr">FR</p>
+        <div class="nav_porfolio"> 
+            <p>Porfolio 2024</p>
         </div>
 
         <div class="nav_contactme">
@@ -57,7 +47,7 @@
         <div id='hamburger_menu'>
             <div class="container">
                 <div class="line upper"></div>
-                <div class="line middle"></div>
+                <!-- <div class="line middle"></div> -->
                 <div class="line lower"></div>
             </div>
         </div>
@@ -71,6 +61,22 @@
 
     <section id="home_section">
 
+        <div id="theme_toggle">
+            <div class='theme_toggle_wrap'>
+                <img class='light_mode' src='assets/svg/light_mode.svg' alt="Switch to dark mode"/>
+                <img class='dark_mode' src='assets/svg/dark_mode.svg' alt="Switch to light mode"/>
+            </div>
+        </div>   
+
+        <div id="language_toggle">
+            <p>EN</p>
+            <div class='language_indicator'>
+                <!-- <div class="background"></div> -->
+                <div class="active"></div>
+            </div>
+            <p class="language_fr">FR</p>
+        </div>
+
         <div id="hobbies_cursor">
             <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
             <svg width="800px" height="800px" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -81,11 +87,25 @@
         </div>
 
         <div class="main_content">
-            <img id="home_section_image" src="assets/img/lubinpappalardo.png" alt="Lubin Pappalardo">
-            <p class="welcome">Welcome! I'm</p>
-            <h1 class='lubin'>LUBIN</h1>
-            <h1 class='pappalardo'>PAPPALARDO</h1>
-            <div class="bottom_row">
+            
+            <div id="home_section_image">
+                <div class="background_wrap"><img class="background" src="assets/img/lubinpappalardo_background.png" alt="Lubin Pappalardo"></div>
+                <img class="foreground" src="assets/img/lubinpappalardo_foreground.png" alt="Lubin Pappalardo">
+            </div>
+
+            <p class="scroll_to_left welcome">Welcome! I'm</p>
+            <h1 class="scroll_to_left" id='lubin'>LUBIN</h1>
+
+            <div class="middle_row">
+                <h1 class="scroll_to_left" id='pappalardo'>PAPPALARDO</h1>
+                <div class="hobbies_list">
+                    <p>Photography</p>
+                    <p>Graphic Design</p>
+                    <p>Trad. Art</p>
+                </div>
+            </div>
+
+            <div class="scroll_to_left bottom_row">
                 <p>and I like</p>
                 <h1 id="hobbies">
                     <div class='hobbies_wrap'>
@@ -95,12 +115,8 @@
                         <span>Photography</span>
                     </div>
                 </h1>
-                <div class="hobbies_list">
-                    <p>Photography</p>
-                    <p>Graphic Design</p>
-                    <p>Trad. Art</p>
-                </div>
             </div>
+
         </div>
 
         <p class="desc">
