--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <title>Lubin Pappalardo</title>
     <meta charset="UTF-8">
     <meta name="Lubin Pappalardo">
-    <meta name="description" content="Lubin Pappalardo's web portfolio"/>
+
+    <meta name="description" content="Lubin Pappalardo is a 17 years old from France with many creative hobbies like photography, traditional art, graphic design and web design and development. Currently based in the UAE."/>
+    <meta content="Lubin Pappalardo | 2024 Web Porfolio " property="og:title">
+    <meta content="Lubin Pappalardo is a 17 years old from France with many creative hobbies like photography, traditional art, graphic design and web design and development. Currently based in the UAE." property="og:description">
+
     <meta name="author" content="Lubin Pappalardo" />
+    <meta name="keywords" content="lubin, pappalardo, photography, art, design, website">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="dark only">
 
@@ -28,6 +34,7 @@
     <script src="assets/gsap/ScrollTrigger.min.js"></script>
     <script src="assets/gsap/TextPlugin.min.js"></script>
     <script src="assets/gsap/ScrollToPlugin.min.js"></script>
+    <script src="assets/gsap/Flip.min.js"></script>
     <script src="assets/jquery.js"></script>
     <script src="index.js" defer></script>
     <script src="gsapAnimations.js" defer></script>
@@ -87,10 +94,12 @@
         </div>
 
         <div class="main_content">
-            
+
+            <div class="home_section_image_wrap">
             <div id="home_section_image">
                 <div class="background_wrap"><img class="background" src="assets/img/lubinpappalardo_background.png" alt="Lubin Pappalardo"></div>
                 <img class="foreground" src="assets/img/lubinpappalardo_foreground.png" alt="Lubin Pappalardo">
+            </div>
             </div>
 
             <p class="scroll_to_left welcome">Welcome! I'm</p>
@@ -101,6 +110,7 @@
                 <div class="hobbies_list">
                     <p>Photography</p>
                     <p>Graphic Design</p>
+                    <p>Webdesign</p>
                     <p>Trad. Art</p>
                 </div>
             </div>
@@ -111,6 +121,7 @@
                     <div class='hobbies_wrap'>
                         <span>Photography</span>
                         <span>Graphic Design</span>
+                        <span>Web Design</span>
                         <span>Trad. Art</span>
                         <span>Photography</span>
                     </div>
@@ -127,6 +138,7 @@
 
     <section id="photography_section">
 
+        <!-- <h1>PHOTOGRAPHY</h1> -->
     </section>
 
 
