--- a/index.html
+++ b/index.html
@@ -28,119 +28,12 @@
 
     <!--style-->
     <link rel="stylesheet" href="styles.css">
-
-    <!--script-->
-    <script src="assets/gsap/gsap.min.js"></script>
-    <script src="assets/gsap/ScrollTrigger.min.js"></script>
-    <script src="assets/gsap/TextPlugin.min.js"></script>
-    <script src="assets/gsap/ScrollToPlugin.min.js"></script>
-    <script src="assets/gsap/Flip.min.js"></script>
-    <script src="assets/jquery.js"></script>
-    <script src="index.js" defer></script>
-    <script src="gsapAnimations.js" defer></script>
 </head>
 <body>
 
-    <navbar id="navbar">
-        <div class="nav_porfolio"> 
-            <p>Porfolio 2024</p>
-        </div>
-
-        <div class="nav_contactme">
-            <div class="background"></div>
-            <p>hello@lubinpappalardo.com</p>
-        </div>
-
-        <div id='hamburger_menu'>
-            <div class="container">
-                <div class="line upper"></div>
-                <!-- <div class="line middle"></div> -->
-                <div class="line lower"></div>
-            </div>
-        </div>
-
-    </navbar>
-
-    <navbar id="mobile_menu">
-
-    </navbar>
-
-
-    <section id="home_section">
-
-        <div id="theme_toggle">
-            <div class='theme_toggle_wrap'>
-                <img class='light_mode' src='assets/svg/light_mode.svg' alt="Switch to dark mode"/>
-                <img class='dark_mode' src='assets/svg/dark_mode.svg' alt="Switch to light mode"/>
-            </div>
-        </div>   
-
-        <div id="language_toggle">
-            <p>EN</p>
-            <div class='language_indicator'>
-                <!-- <div class="background"></div> -->
-                <div class="active"></div>
-            </div>
-            <p class="language_fr">FR</p>
-        </div>
-
-        <div id="hobbies_cursor">
-            <?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-            <svg width="800px" height="800px" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="12.5" cy="12.5" r="12.5" fill="#121923"/>
-                <path d="M9 8.5H16.5V16" stroke="#FFFFFF" stroke-width="1.2"/>
-                <path d="M16.5 8.5L7 18" stroke="#FFFFFF" stroke-width="1.2"/>
-            </svg>
-        </div>
-
-        <div class="main_content">
-
-            <div class="home_section_image_wrap">
-            <div id="home_section_image">
-                <div class="background_wrap"><img class="background" src="assets/img/lubinpappalardo_background.png" alt="Lubin Pappalardo"></div>
-                <img class="foreground" src="assets/img/lubinpappalardo_foreground.png" alt="Lubin Pappalardo">
-            </div>
-            </div>
-
-            <p class="scroll_to_left welcome">Welcome! I'm</p>
-            <h1 class="scroll_to_left" id='lubin'>LUBIN</h1>
-
-            <div class="middle_row">
-                <h1 class="scroll_to_left" id='pappalardo'>PAPPALARDO</h1>
-                <div class="hobbies_list">
-                    <p>Photography</p>
-                    <p>Graphic Design</p>
-                    <p>Webdesign</p>
-                    <p>Trad. Art</p>
-                </div>
-            </div>
-
-            <div class="scroll_to_left bottom_row">
-                <p>and I like</p>
-                <h1 id="hobbies">
-                    <div class='hobbies_wrap'>
-                        <span>Photography</span>
-                        <span>Graphic Design</span>
-                        <span>Web Design</span>
-                        <span>Trad. Art</span>
-                        <span>Photography</span>
-                    </div>
-                </h1>
-            </div>
-
-        </div>
-
-        <p class="desc">
-            I'm French, 17 years old and currently living in the UAE. I love working on creative projects.
-        </p>
-        
+    <section style="padding: 20px;">
+        <div>Coming soon... :)</div>
     </section>
-
-    <section id="photography_section">
-
-        <!-- <h1>PHOTOGRAPHY</h1> -->
-    </section>
-
 
 </body>
 </html>
