--- a/index_v2.html
+++ b/index_v2.html
@@ -121,12 +121,10 @@
         
     </section>
 
-    <!--???-->
 
-<!-- 
     <section id="photography_section">
 
-        <main id="photography_main">
+        <!-- <main id="photography_main">
             <div id="featured_photography">
                 <div><img src="assets/img/photography/image1.png" alt="Featured picture #1 - Cormorant"><p>Cormorant</p></div>
                 <div><img src="assets/img/photography/image2.png" alt="Featured picture #2 - Barred Owl"><p>Barred Owl</p></div>
@@ -151,9 +149,9 @@
                     <p class="section_desc">I enjoy taking pictures of wildlife and landscape when I travel which I post on Instagram but also like to record from time to time.  I started photography in 2021 and got my first own professional camera in late 2022, Canon EOS R7 with the Canon RF 100-500mm which I still use.</p>
                 </div>
             </div>
-        </main>
+        </main> -->
 
-    </section> -->
+    </section>
 
 
 </body>
