--- a/index.html
+++ b/index.html
@@ -17,22 +17,24 @@
     <meta name="color-scheme" content="dark only">
 
     <!-- Icon -->
-    <link rel="icon" type="image/png" href="assets/img/lp_light.png" media="(prefers-color-scheme: light)" />
-    <link rel="icon" type="image/png" href="assets/img/lp_dark.png" media="(prefers-color-scheme: dark)" />
+    <link rel="icon" type="image/png" href="assets/svg/favicon_light_mode.svg" media="(prefers-color-scheme: light)" />
+    <link rel="icon" type="image/png" href="assets/svg/favicon_dark_mode.svg" media="(prefers-color-scheme: dark)" />
 
     <!--apple-->
-    <link rel="apple-touch-icon" href="assets/img/lp_light.png">
-    <link rel="apple-touch-startup-image" href="assets/img/lp_light.png">
+    <link rel="apple-touch-icon" href="assets/svg/favicon_light_mode.svg">
+    <link rel="apple-touch-startup-image" href="assets/svg/favicon_light_mode.svg">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!--style-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
     <section style="padding: 20px;">
-        <div>Coming soon... :)</div>
+        <div>Coming soon... :)
+            <a href="/artwork.html">-> Art portfolio</a>
+        </div>
     </section>
 
 </body>
