--- a/index_v2.html
+++ b/index_v2.html
@@ -27,7 +27,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!--style-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 
     <!--script-->
     <script src="assets/gsap/gsap.min.js"></script>
@@ -88,7 +88,6 @@
     <section id="home_section">
 
         <div id="lubin_pronunciation_help">
-            <img src="assets/svg/speaker.svg" alt="Listen to the pronounciation">
             /ly.bã/
         </div>
 
@@ -122,10 +121,10 @@
     </section>
 
 
-    <section id="photography_section">
+    <section id="hobby_section">
 
-        <!-- <main id="photography_main">
-            <div id="featured_photography">
+        <main id="hobby_section_main">
+            <div id="featured_work">
                 <div><img src="assets/img/photography/image1.png" alt="Featured picture #1 - Cormorant"><p>Cormorant</p></div>
                 <div><img src="assets/img/photography/image2.png" alt="Featured picture #2 - Barred Owl"><p>Barred Owl</p></div>
                 <div><img src="assets/img/photography/image3.png" alt="Featured picture #3 - Canadian Jay"><p>Canadian Jay</p></div>
@@ -137,19 +136,85 @@
             <div class="section_info">
                 <div class="left_group">
                     <div class="section_subtitle">
-                        <p>Videography and</p>
-                        <div class="section_tags">
-                            <p>#Lightroom</p>
+                        <div class="section_subtitle_container">
+                            <div>Videography and</div>
+                            <div>Graphic design, website </div>
+                            <div>Graphite, Charcoal</div>
                         </div>
                     </div>
-                    <h1 class="section_title">PHOTOGRAPHY</h1>
+                    <h1 class="section_title">
+                        <div class="section_title_container">
+                            <div>photography</div>
+                            <div>design & dev</div>
+                            <div>trad. art</div>
+                            <!-- <div>photography</div> -->
+                        </div>
+                    </h1>
                 </div>
                 <div class="right_group">
                     <button class="section_call_to_action">Visit my gallery</button>
-                    <p class="section_desc">I enjoy taking pictures of wildlife and landscape when I travel which I post on Instagram but also like to record from time to time.  I started photography in 2021 and got my first own professional camera in late 2022, Canon EOS R7 with the Canon RF 100-500mm which I still use.</p>
+                    <div class="section_desc_container">
+                        <!-- --- Photography --- -->
+                        <p class="section_desc" id="desc_photography">
+                            <span class="section_tags">
+                                <span>#DaVinci</span>
+                                <span>#Lightroom</span>
+                                <span>#CanonEOSR7</span>
+                            </span>
+                            I enjoy taking pictures of wildlife and landscape when I travel which I post on Instagram but also like to record from time to time. I started photography in 2021 and got my first own professional camera in late 2022, Canon EOS R7 with the Canon RF 100-500mm which I still use.
+                        </p>
+                        <!-- --- Design --- -->
+
+                        <!--
+                        https://www.washingtonaccueil.org/Job-Networking-Club
+                        -->
+
+                        <p class="section_desc" id="desc_design">
+                            <span class="section_tags">
+                                <span>#Figma</span>
+                                <span>#HTML/CSS/JS</span>
+                            </span>
+                            I learned HTML, CSS and JS in mid-2022. Since then, I made many websites both for myself, for friends, clubs, school projects and clients. Rapidly, I understood the importance of UI/UX design and started using Figma before coding them. This also helped me improve my graphic design skills.
+                        </p>
+                        <!-- --- Art --- -->
+                        <p class="section_desc" id="desc_art">
+                            <span class="section_tags">
+                                <span>#Graphite</span>
+                                <span>#Charcoal</span>
+                                <span>#Pastels</span>
+                                <span>...</span>
+                            </span>
+                            I enjoy sketching and drawing with graphite and charcoal, but I also do a bit of sculpting with clay. I like drawing portraits of both humans and animals but also like creating fantastical creatures. I am looking forward to learn more mediums like watercolors or try animation.
+                        </p>
+                    </div>
                 </div>
             </div>
-        </main> -->
+        </main>
+
+        <!-- For debug only -->
+        <!-- <div style="height: 100vh; border: 1px solid red; width: 10px;"></div>
+        <div style="height: 100vh; border: 1px solid red; width: 10px;"></div>
+        <div style="height: 100vh; border: 1px solid red; width: 10px;"></div>
+        <div style="height: 100vh; border: 1px solid red; width: 10px;"></div>
+        <div style="height: 100vh; border: 1px solid red; width: 10px;"></div> -->
+
+    </section>
+
+    <section>
+
+    </section>
+
+    <section id="footer_section">
+        
+        <div class="content">
+            Hosted on Github Pages
+        </div>
+
+        <!-- <svg>
+            <h1>LUBIN PAPPALARDO PORTFOLIO 2024</h1>
+        </svg> -->
+
+        <h1 id="footer_credit">LUBIN PAPPALARDO PORTFOLIO 2024</h1>
 
     </section>
 
